--- a/components/footer.html
+++ b/components/footer.html
@@ -11,6 +11,7 @@
                 <a href="/corn-prices.html">Corn</a>
                 <a href="/soybean-prices.html">Soybeans</a>
                 <a href="/wheat-prices.html">Wheat</a>
+                <a href="/milk-prices.html">Milk</a>
                 <a href="/tools.html">Tools</a>
                 <a href="/fastfacts.html">Fast Facts</a>
                 <a href="/calendar.html">Calendar</a>
