--- a/components/header.html
+++ b/components/header.html
@@ -9,6 +9,7 @@
                     <a href="/corn-prices.html">🌽 Corn</a>
                     <a href="/soybean-prices.html">🫘 Soybeans</a>
                     <a href="/wheat-prices.html">🌾 Wheat</a>
+                    <a href="/milk-prices.html">🥛 Milk & Dairy</a>
                 </div>
             </div>
             
@@ -44,6 +45,7 @@
     <a href="/corn-prices.html">🌽 Corn</a>
     <a href="/soybean-prices.html">🫘 Soybeans</a>
     <a href="/wheat-prices.html">🌾 Wheat</a>
+    <a href="/milk-prices.html">🥛 Milk & Dairy</a>
     
     <div class="nav-mobile-section">Tools</div>
     <a href="/tools.html">All Tools</a>
