--- a/components/footer.html
+++ b/components/footer.html
@@ -12,10 +12,17 @@
                 <a href="/soybean-prices.html">Soybeans</a>
                 <a href="/wheat-prices.html">Wheat</a>
                 <a href="/milk-prices.html">Milk</a>
-                <a href="/tools.html">Tools</a>
+                <a href="/cashbids.html">Cash Bids</a>
+                <a href="/market-news.html">Market News</a>
+                <a href="/spray.html">Spray Weather</a>
+                <a href="/drought.html">Drought</a>
+                <a href="/crop-progress.html">Crop Progress</a>
+                <a href="/quickstats.html">USDA Data</a>
                 <a href="/fastfacts.html">Fast Facts</a>
-                <a href="/calendar.html">Calendar</a>
-                <a href="/resources.html">Resources</a>
+                <a href="/exports.html">Exports</a>
+                <a href="/ag-odds.html">Ag Odds</a>
+                <a href="/soils.html">Soil Survey</a>
+                <a href="/tools.html">All Tools</a>
                 <a href="/news.html">News</a>
             </div>
             
