--- a/components/header.html
+++ b/components/header.html
@@ -1,3 +1,4 @@
+<a href="#main-content" class="skip-nav">Skip to content</a>
 <nav class="nav">
     <div class="nav-inner">
         <a href="/" class="nav-logo">AGSIST</a>
